syntax = "proto3";

package bidrpcproto;

option go_package = "github.com/athxx/bidfood/bidrpc/bidrpcproto;bidrpcproto";

// Product represents a product in the inventory
message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 quantity = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
}

// Request messages
message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  int32 quantity = 4;
}

message GetProductRequest {
  string id = 1;
}

message UpdateProductRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 quantity = 5;
}

message DeleteProductRequest {
  string id = 1;
}

message ListProductsRequest {
  int32 page = 1;
  int32 page_size = 2;
  string name_filter = 3;
}

// Response messages
message CreateProductResponse {
  Product product = 1;
}

message GetProductResponse {
  Product product = 1;
}

message UpdateProductResponse {
  Product product = 1;
}

message DeleteProductResponse {
  bool success = 1;
}

message ListProductsResponse {
  repeated Product products = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

// Product service definition
service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);
  rpc UpdateProduct (UpdateProductRequest) returns (UpdateProductResponse);
  rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);
  rpc ListProducts (ListProductsRequest) returns (ListProductsResponse);
}
